--- a/src/index.html
+++ b/src/index.html
@@ -21,40 +21,70 @@
 
 <body>
 <section id="header">
-    <div class="container" style="position: relative;">
-        <div class="row">
-            <div class="header-text text-center">
-                <span class="main-title">I'm Stefan Koteski</span>
-                <span class="secondary-title">I build and break web apps</span>
+    <div class="overlay"></div>
+    <div class="header-content">
+        <div class="container">
+            <div class="row">
+                <div class="header-text text-center">
+                    <span class="main-title">Ste<span class="text-colored">fan</span> Koteski</span>
+                    <span class="secondary-title">I build and break web apps</span>
+                </div>
+
+                <div class="social-icons text-center">
+                    <ul>
+                        <li><a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                        <li><a href="#"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                    </ul>
+                </div>
+                <div class="section-toggle text-center">
+                    <ul>
+                        <li><a href="#" data-toggle="about">About</a></li>
+                        <li><a href="#" data-toggle="project">Projects</a></li>
+                    </ul>
+                </div>
+
             </div>
-
-
-            <div class="social-icons">
-                <ul class="">
-                    <li><a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fa fa-skype" aria-hidden="true"></i></a></i></li>
-                </ul>
-            </div>
-
         </div>
     </div>
 </section>
 
-<section id="about">
-
+<section id="footer">
     <div class="container">
-        <div class="row">
-
+        <div class="" style="color: #000;">ASDSADASDSADSADASD</div>
+        <div class="about-section" style="color: #000; display: none">test</div>
+        <div class="project-section clearfix" style="color: #000;display: none">
+            <div class="project-item col-lg-3"><img src="https://grouper.mk/images/og_image.png" class="img-responsive"/></div>
         </div>
     </div>
-
 </section>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
+<script>
+    $(document).ready(function () {
+        var toggled = false,
+            toggle = false;
+        $('.section-toggle a').click(function () {
+            toggle = $(this).data('toggle');
+            console.log(toggle);
+            toggle = $('.' + toggle + '-section');
+            var section = $('#footer');
 
+            if (!toggled) {
+                toggle.show();
+                var height = section.height() +toggle.height();
+                section.animate({height: height + 'px'}, 350);
+                toggled = true;
+            } else {
+                section.animate({height: '5vh'}, 350);
+                toggle.hide();
+
+                toggled = false;
+            }
+        });
+    });
+</script>
 </body>
 </html>
