--- a/src/index.html
+++ b/src/index.html
@@ -32,9 +32,9 @@
 
                 <div class="social-icons text-center">
                     <ul>
-                        <li><a href="skype:stefan-koteski"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
-                        <li><a href="https://github.com/karcstefan"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-                        <li><a href="mailto:" style="padding-right: 0;margin-right: 0;"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                        <li><a href="skype:stefan-koteski" target="_blank"><i class="fa fa-skype" aria-hidden="true"></i></a></li>
+                        <li><a href="https://github.com/karcstefan" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+                        <li><a href="mailto:" style="padding-right: 0;margin-right: 0;" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                     </ul>
                 </div>
                 <div class="row">
